--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     </style>
 </head>
 <body>
-    <img src="/img/capitulo-01__01.jpg" alt="Página 01">
-    <img src="/img/capitulo-01__02.jpg" alt="Página 02">
-    <img src="/img/capitulo-01__03.jpg" alt="Página 03">
-    <img src="/img/capitulo-01__04.jpg" alt="Página 04">
+    <img src="./img/capitulo-01__01.jpg" alt="Página 01">
+    <img src="./img/capitulo-01__02.jpg" alt="Página 02">
+    <img src="./img/capitulo-01__03.jpg" alt="Página 03">
+    <img src="./img/capitulo-01__04.jpg" alt="Página 04">
 </body>
 </html>
