--- a/index.html
+++ b/index.html
@@ -14,12 +14,63 @@
         img {
             width: 100%;
         }
+        .navigation {
+            width: 100%;
+            height: 80px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: white;
+            position: fixed;
+            box-shadow: 0 0 30px rgba(0,0,0,0.08);
+        }
+        .navigation a {
+            padding: 0.5rem 1.2rem;
+            border-radius: 0.5rem;
+            color: #3f3f3f;
+            text-decoration: none;
+            transition: all 300ms;
+        }
+        .navigation a:hover {
+            color: #141414;
+            background-color: #e9e9e9;
+        }
+        .images img {
+            padding-top: 80px;
+        }
     </style>
 </head>
 <body>
-    <img src="./img/capitulo-01__01.jpg" alt="Página 01">
-    <img src="./img/capitulo-01__02.jpg" alt="Página 02">
-    <img src="./img/capitulo-01__03.jpg" alt="Página 03">
-    <img src="./img/capitulo-01__04.jpg" alt="Página 04">
+    
+    <nav class="navigation">
+        <a href="#001">001</a>
+        <a href="#002">002</a>
+        <a href="#003">003</a>
+        <a href="#004">004</a>
+        <a href="#005">005</a>
+        <a href="#006">006</a>
+        <a href="#007">007</a>
+        <a href="#008">008</a>
+        <a href="#009">009</a>
+        <a href="#010">010</a>
+        <a href="#011">011</a>
+        <a href="#012">012</a>
+        <a href="#013">013</a>
+    </nav>
+    <div class="images">
+        <img src="./layout/001.png" alt="" id="001">
+        <img src="./layout/002.png" alt="" id="002">
+        <img src="./layout/003.png" alt="" id="003">
+        <img src="./layout/004.png" alt="" id="004">
+        <img src="./layout/005.png" alt="" id="005">
+        <img src="./layout/006.png" alt="" id="006">
+        <img src="./layout/007.png" alt="" id="007">
+        <img src="./layout/008.png" alt="" id="008">
+        <img src="./layout/009.png" alt="" id="009">
+        <img src="./layout/010.png" alt="" id="010">
+        <img src="./layout/011.png" alt="" id="011">
+        <img src="./layout/012.png" alt="" id="012">
+        <img src="./layout/013.png" alt="" id="013">
+    </div>
 </body>
 </html>
