--- a/index.html
+++ b/index.html
@@ -38,11 +38,14 @@
         .images img {
             padding-top: 80px;
         }
+        .comic_pages {
+            max-width: 800px;
+        }
     </style>
 </head>
 <body>
     
-    <nav class="navigation">
+    <!--<nav class="navigation">
         <a href="#001">001</a>
         <a href="#002">002</a>
         <a href="#003">003</a>
@@ -71,6 +74,9 @@
         <img src="./layout/011.png" alt="" id="011">
         <img src="./layout/012.png" alt="" id="012">
         <img src="./layout/013.png" alt="" id="013">
+    </div>-->
+    <div class="comic_pages images">
+        <img src="./img/pagina-001.png" alt="" srcset="">
     </div>
 </body>
 </html>
