--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
         <img src="./layout/013.png" alt="" id="013">
     </div>-->
     <div class="comic_pages images">
-        <img src="./img/pagina-001.png" alt="" srcset="">
+        <img src="./img/pagina-001.png" alt="">
+        <img src="./img/pagina-002.png" alt="">
     </div>
 </body>
 </html>
