--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>-->
     <div class="comic_pages images">
         <img src="./img/pagina_001.png" alt="">
-        <img src="./img/pagina_002.png" alt="">
+        <img src="./img/pagina-002.png" alt="">
     </div>
 </body>
 </html>
