New changes, now with more pages :b

--- a/index.html
+++ b/index.html
@@ -76,8 +76,12 @@
         <img src="./layout/013.png" alt="" id="013">
     </div>-->
     <div class="comic_pages images">
-        <img src="./img/pagina_001.png" alt="">
+        <img src="./img/pagina-001.png" alt="">
         <img src="./img/pagina-002.png" alt="">
+        <img src="./img/pagina-003.png" alt="">
+        <img src="./img/pagina-004.png" alt="">
+        <img src="./img/pagina-005.png" alt="">
+        <img src="./img/pagina-006.png" alt="">
     </div>
 </body>
 </html>
