--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
         <img src="./img/pagina-004.png" alt="">
         <img src="./img/pagina-005.png" alt="">
         <img src="./img/pagina-006.png" alt="">
+        <img src="./img/pagina-007.png" alt="">
+        <img src="./img/pagina-008.png" alt="">
+        <img src="./img/pagina-009.png" alt="">
+        <img src="./img/pagina-010.png" alt="">
+        <img src="./img/pagina-011.png" alt="">
+        <img src="./img/pagina-012.png" alt="">
+        <img src="./img/pagina-013.png" alt="">
     </div>
 </body>
 </html>
