--- a/capitulo-2/index.html
+++ b/capitulo-2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cómic por Hermayoly</title>
+    <title>Cómic por Hermayoly, capítulo 2</title>
     <style>
         * {
             margin: 0;
